@@ -1,0 +1,24 @@
+# $NetBSD: Makefile.linux-i386,v 1.1 2007/08/22 16:43:34 jlam Exp $
+
+DISTNAME=		rarlinux-3.6.0
+PKGNAME=		${DISTNAME:S/linux//}
+MASTER_SITES=		http://www.rarsoft.com/rar/ \
+			ftp://ftp.rarsoft.com/rar/
+
+CONFLICTS=		rarlinux-[0-9]* rar-linux-[0-9]*
+
+EMUL_MODULES.linux=	base compat
+
+WRKSRC=			${WRKDIR}/rar
+BUILD_DIRS=		# empty
+
+DATADIR=		${PREFIX}/lib
+DOCDIR=			${PREFIX}/share/doc/rar
+
+INSTALLATION_DIRS=	bin lib ${DATADIR} ${DOCDIR}
+
+do-install:
+	${INSTALL_PROGRAM} ${WRKSRC:Q}/rar_static ${PREFIX:Q}/bin/rar
+	${INSTALL_DATA} ${WRKSRC:Q}/default.sfx ${DATADIR:Q}
+	${INSTALL_DATA} ${WRKSRC}/*.txt ${DOCDIR:Q}
+	${INSTALL_DATA} ${WRKSRC}/rarfiles.lst ${DOCDIR:Q}
