@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.2 2005/09/02 23:15:36 rillig Exp $
+@comment $NetBSD: PLIST.netbsd-i386,v 1.1 2007/08/22 16:43:35 jlam Exp $
 bin/rar
 share/doc/rar/Internet.Txt
 share/doc/rar/License.Txt
